web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-rhs/module-parent-not-current-async/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,17)
2|    async (valu=await) => {
 |               ^
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,17)
2|    async (valu=await) => {
 |               ^
